--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,7 @@ services:
       - 3000:80
     tty: true
   server:
-    build:
-      context: .
-      dockerfile: server.dockerfile
+    build: ./server
     volumes:
       - ./server:/usr/src/app
     working_dir: /usr/src/app
